--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -1,5 +1,6 @@
 .rightbar{
     flex: 3.5;
+    margin-left: 10px;
 }
 
 .rightbarWrapper{
@@ -43,5 +44,55 @@
     padding: 0;
     margin-left: 30px;
     list-style: none;
+
+}
+
+.rightbarTile{
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.rightbarInfo{
+    margin-bottom: 30px;
+}
+
+.rightbarInfoItem{
+    margin-bottom: 10px;
+
+}
+
+.rightbarInfoKey{
+    font-weight: 500;
+    margin-right: 15px;
+    color: #555 ;
+}
+
+.rightbarInfoValue{
+    font-weight: 300;
+
+
+}
+
+.rightbarFollowings{
+    display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+
+   
+}
+.rightbarFollowing{
+    display: flex;
+    flex-direction:column;
+    margin-bottom: 20px;
+    cursor: pointer;
+    padding:10px;
+}
+
+
+.rightbarFollowingImg{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 5px;
 
 }
